force-app/main/default/objects/SR_Workflow_Definition__c/SR_Workflow_Definition__c.object-meta.xml
<CustomObject>
    <description>This object describes the Workflow Definition detail.</description>
    <label>SR Workflow Definition</label>
    <nameField>
        <displayFormat>W-{000000}</displayFormat>
        <label>Workflow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>