force-app/main/default/objects/SR_Workflow_Definition__c/fields/Case_Sub_Nature__c.field-meta.xml
<CustomField>
    <fullName>Case_Sub_Nature__c</fullName>
    <label>Case Sub Nature</label>
    <length>80</length>
    <type>Text</type>
</CustomField>