force-app/main/default/objects/SR_Workflow_Definition__c/fields/Customer_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subscription__c</fullName>
    <label>Customer Subscription</label>
    <length>80</length>
    <type>Text</type>
</CustomField>