force-app/main/default/objects/SR_Workflow_Definition__c/fields/Determination_ID__c.field-meta.xml
<CustomField>
    <fullName>Determination_ID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Determination ID from Case Determination</description>
    <label>Determination ID</label>
    <referenceTo>SR_Case_Determination__c</referenceTo>
    <relationshipLabel>Workflow Definitions</relationshipLabel>
    <relationshipName>SR_Workflow_Definition</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>