force-app/main/default/objects/SR_Workflow_Definition__c/fields/Workflow_Code__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Code__c</fullName>
    <description>The Workflow Code derived to resolve case</description>
    <label>Workflow Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>